--- a/nft_market/src/pages/styles/Home.css
+++ b/nft_market/src/pages/styles/Home.css
@@ -9,7 +9,7 @@ section {
     width: 1400px;
     display: flex;
     flex-direction: column;
-    margin: 20px 0;
+    margin: 50px 0;
 }
 
 .sectionTitle {
@@ -23,4 +23,14 @@ section {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 20px;
+}
+
+.sellersCointainer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.collectionsCointainer {
+    display: flex;
+    justify-content: space-between;
 }
